# ffi-analyzer

./: Cargo.toml
src/: diagnosis.rs  lib.rs  option.rs  utils.rs
